--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 
 project(InputXmlParser
         VERSION 1.1
-        DESCRIPTION "Gookto Input handling Library"
+        DESCRIPTION "NextSIM Input handling Library"
         LANGUAGES CXX)
 
 add_subdirectory(sources/NextSim_io)
